fixed image sized

--- a/documentation/latex/chapter-lts.tex
+++ b/documentation/latex/chapter-lts.tex
@@ -14,7 +14,7 @@ use-case editor. The \emph{LTS} model is depicted in the following figure.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=450pt]{images/lts}
+  \includegraphics[width=\textwidth]{images/lts}
   \caption{\emph{LTS} model}
   \label{fig:ReprotoolLTSModel}
 \end{figure}
