--- a/documentation/latex/chapter-umlExport.tex
+++ b/documentation/latex/chapter-umlExport.tex
@@ -10,7 +10,7 @@ The actors in the diagram are provided with activities that they perform.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=400pt]{images/ReprotoolActionsModelSimple}
+  \includegraphics[width=\textwidth]{images/ReprotoolActionsModelSimple}
   \caption{Model of use-case step actions}
   \label{fig:ReprotoolActionsModel}
 \end{figure}
