user-documentation - work in progress

--- a/documentation/latex-user/chapter-newProj.tex
+++ b/documentation/latex-user/chapter-newProj.tex
@@ -234,8 +234,7 @@ Now add the annotation \emph{\#open\_envelope} to the step \emph{Peter opens the
 to the step \emph{Peter puts the letter into the envelope and closes it}.
 
 \subsubsection{\emph{Annotations} in the \emph{takeLetter} use-case}
-Please add the annotaion \emph{\#create\_letter} to the step in use-case \emph{takeLetter} that reads: \emph{Peter goes to the post
-office}\footnote{Please don't be worried if you think this annotation does not belong here. Indeed, it doesn't. But we create it
+Please add the annotaion \emph{\#create\_letter} to the step in use-case \emph{takeLetter} that reads: \emph{Peter goes home}\footnote{Please don't be worried if you think this annotation does not belong here. Indeed, it doesn't. But we create it
 here just to show in the later part of this tutorial what happens when you break the semantics of annotations.}.
 Also add the annotaion \emph{\#use\_letter} to the step in the same use-case that reads: \emph{The post officer takes the letter
 from Peter}.
