--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -171,5 +171,6 @@
 \include{chapter-introduction}
 \include{chapter-newProj}
 \include{chapter-verification}
+\include{chapter-uml}
  
 \end{document}
