user documentation finished

--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -172,5 +172,6 @@
 \include{chapter-newProj}
 \include{chapter-verification}
 \include{chapter-uml}
+\include{chapter-vocabulary}
  
 \end{document}
