--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -172,11 +172,11 @@
   \include{chapter-verification}
   \include{chapter-umlExport}
   \include{chapter-lts}
-  \include{chapter-linguistic}
+  \include{chapter-linguistics}
   \include{chapter-installation}
   \include{chapter-tutorial}
 
 \bibliographystyle{splncs03}
-\bibliography{bibfile,bibfile-nusmv,bibfile-eclipse}
+\bibliography{bibfile,bibfile-nusmv,bibfile-eclipse,bibfile-linguistics}
 
 \end{document}
