--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -172,6 +172,7 @@
 \include{chapter-newProj}
 \include{chapter-verification}
 \include{chapter-uml}
+\include{chapter-manual-analysis}
 \include{chapter-vocabulary}
  
 \end{document}
