doc and cleaning preference page

--- a/documentation/latex/chapter-installation.tex
+++ b/documentation/latex/chapter-installation.tex
@@ -1,8 +1,20 @@
 \section{Installation}
 
-TODO: Instructions for users:
+Our project is distributed in three forms depending on user computer skills. Thanks to Java implementation of all external tools, our project is capable to run on all platforms, where can be executable Eclipse environment. Project is properly tested on Linux and Windows 32bit systems.
+
+Due to big memory consumption during linguistics analysis (e.g. loading tools models) it is recommended to run this application with at least 1GB free operating memory.  
+
+Instructions for users can be divided into:
 \begin{itemize}
 	\item Users: How to install the RCP product
 	\item Advances Users: How to install Reprotool features from update site
 	\item Developers: How to prepare Eclipse for development of Reprotool
 \end{itemize}
+
+Common user can use bundle provided with this documentation. There is only needed to unpack the package and then execute specific version depending on user environment.
+
+Advanced user can use tutorial in Eclipse application. From menu "Help-> Install new software" can  install Reprotool from update site located on project website main page located at \href{http://code.google.com/a/eclipselabs.org/p/reprotool/}{http://code.google.com/a/eclipselabs.org/p/reprotool/}.
+
+For developers is described detailed manual at project wiki pages  located at  \href{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/}{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/} in section DevelopmentEnvironment. There ale described instruction for main dependencies like XText 2.1+, GEF and EMF.
+
+
