minor fixes in the documentation

--- a/documentation/latex/chapter-introduction.tex
+++ b/documentation/latex/chapter-introduction.tex
@@ -13,7 +13,7 @@ On the other hand, the drawback of textual use-cases is the inherent vagueness a
 One of the possible approaches to minimizing such human errors is the model-driven development paradigm \cite{MDD} where automatic transformations between models are employed. However, before any transformation can be used, formal models have to be constructed first. In case of textual use-cases, this can be achieved in a semi-automatic way with the support of existing natural language processing (NLP) tools.
 
 \subsection{Goals}
-Reprotool is an IDE (Integrated Development Environment) tools for capturing requirements of a developed system and verifying consistency of the system's specification.
+Reprotool is an IDE (Integrated Development Environment) tool for capturing requirements of a developed system and verifying consistency of the system's specification.
 In the current version, Reprotool focuses on functional requirements in the form of use-cases\footnote{Future versions will also support other types of requirements.}.
 
 Reprotool users can interactively derive formal specification of the system's behavior from plain text. This way, both "user-readable" textual specification and precise formal specifications is developed at the same time, only slightly increasing the effort required to create a consistent specification. The developed model can be further processed e.g. verified for consistency or exported to other formats, such as UML diagrams.
