--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -115,7 +115,7 @@ Input 	Parse trees of each sentence
 Output 	Lemma for each word 
         \end{verbatim}
   \caption{Lemmatizer data}
-  \label{tab.parsing}
+  \label{tab.lemmatizer}
 \end{center}
 \end{table} 
 
