--- a/documentation/latex-user/chapter-manual-analysis.tex
+++ b/documentation/latex-user/chapter-manual-analysis.tex
@@ -15,7 +15,7 @@ becouse step sentence \emph{"The user opens the map web page"} describes communi
   \centering
   \includegraphics[height=280pt]{images/manual-analysis/step1-action-not-selected}
   \caption{Use case step before action specification}
-  \label{fig:reprotoolUCEditor}
+  %TODO:\label{fig:reprotoolUCEditor}
 \end{figure}
 
 Click on the first use case step and notice that boxes in \emph{Sentence analysis view} appeared and three icons in application toolbar got enabled.
@@ -24,7 +24,7 @@ Click on the first use case step and notice that boxes in \emph{Sentence analysi
   \centering
   \includegraphics[height=280pt]{images/manual-analysis/step1-action-selected}
   \caption{\emph{To system} action specified}
-  \label{fig:reprotoolUCEditor}
+  %TODO:\label{fig:reprotoolUCEditor}
 \end{figure}
 
 Click into second column, select with mouse word "user" and click on "S" toolbar button. Border appears around the word and \emph{Sender} box in \emph{Sentence analysis view} now contains word "user". We call this \emph{textrange} selection. Now select in \emph{Sender} combobox item \emph{"User"}. This combobox is filled with actors contained in project.
@@ -33,7 +33,7 @@ Click into second column, select with mouse word "user" and click on "S" toolbar
   \centering
   \includegraphics[height=280pt]{images/manual-analysis/step1-sender-selected}
   \caption{\emph{Sender} selected}
-  \label{fig:reprotoolUCEditor}
+  %TODO:\label{fig:reprotoolUCEditor}
 \end{figure}
 
 Similarly one can mark \emph{Activity} and \emph{Action parameters}. Box for the \emph{action parameters} allows to add more than one \emph{action parameter} becouse multiple parameters are
@@ -52,7 +52,7 @@ GUI may be less responsible for a few seconds while analysis is running.
   \centering
   \includegraphics[height=280pt]{images/manual-analysis/step3-automatic-before}
   \caption{Step 3 before automatic analysis run}
-  \label{fig:reprotoolUCEditor}
+  %TODO:\label{fig:reprotoolUCEditor}
 \end{figure}
 
 Type of the step should be analysed as \emph{To system} and sender, activity and action parameter
@@ -62,5 +62,5 @@ should be filled.
   \centering
   \includegraphics[height=280pt]{images/manual-analysis/step3-automatic-after}
   \caption{Step 3 after automatic analysis run}
-  \label{fig:reprotoolUCEditor}
+  %TODO:\label{fig:reprotoolUCEditor}
 \end{figure}
