a little bit of documentation

--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -170,6 +170,7 @@
 
 \include{chapter-introduction}
 \include{chapter-newProj}
+\include{chapter-import}
 \include{chapter-verification}
 \include{chapter-uml}
 \include{chapter-manual-analysis}
