Added quick tutorial chapter to the user-documentation.

--- a/documentation/latex-user/chapter-import.tex
+++ b/documentation/latex-user/chapter-import.tex
@@ -22,7 +22,7 @@ while and browse these files until you get a general idea about the format of th
 \subsection{Importing the use-cases into a reprotool project}
 
 Now we are going to import these textual specifications into the empty \emph{Admission system} project. Firstly open the
-\emph{admission.swproj} file in the \emph{Admission system} exmaple project. You shoul see that this project does not contain any
+\emph{admission.swproj} file in the \emph{Admission system} exmaple project. You should see that this project does not contain any
 use-cases yet. Luckily, we are going to change it. Choose the following command:
 \begin{verbatim}
 File / Import
@@ -34,7 +34,7 @@ Now select the \emph{Reprotool} category and the \emph{Import use-cases} wizard.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics{images/reprotoolImportWizard}
+  \includegraphics[height=280pt]{images/reprotoolImportWizard}
   \caption{Reprotool import wizard}
   \label{fig:reprotoolImportWizard}
 \end{figure}
