--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -171,6 +171,7 @@
 \include{chapter-introduction}
 \include{chapter-newProj}
 \include{chapter-import}
+\include{chapter-quick-tutorial}
 \include{chapter-verification}
 \include{chapter-uml}
 \include{chapter-manual-analysis}
