a little bit of documentation.

--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -172,7 +172,8 @@
 \include{chapter-newProj}
 \include{chapter-import}
 \include{chapter-quick-tutorial}
-\include{chapter-verification}
+\include{chapter-model-checking}
+%\include{chapter-verification}
 \include{chapter-uml}
 \include{chapter-manual-analysis}
 \include{chapter-vocabulary}
